# emphatic_ssd_simulation

./: README.md
my_pht/: CMakeLists.txt  my_pht_main.cc  readme.txt  run1.mac  run1_working.mac  ssd_strips_detector.gdml  vis.mac
my_pht/include/: my_pht_action_initialization.hh  my_pht_data_structures.hh  my_pht_detector_construction.hh  my_pht_event_action.hh  my_pht_histo_manager.hh  my_pht_input_parameters.hh  my_pht_link_def.hh  my_pht_physics_list.hh  my_pht_primary_generator_action.hh  my_pht_run_action.hh  my_pht_session.hh  my_pht_stepping_action.hh  my_pht_tracking_action.hh
my_pht/src/: my_pht_action_initialization.cc  my_pht_data_structures.cc  my_pht_detector_construction.cc  my_pht_event_action.cc  my_pht_histo_manager.cc  my_pht_physics_list.cc  my_pht_primary_generator_action.cc  my_pht_run_action.cc  my_pht_session.cc  my_pht_stepping_action.cc  my_pht_tracking_action.cc
